# py-bot

./: .env  .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
api/: URL.json  index.py  test.py
api/movies/【中1数学】一次方程式/: 【一次方程式】分数を含む方程式をわかりやすく解説！【中1数学】 [Aow3umhpcGc].txt  【一次方程式】小数を含む方程式の問題をわかりやすく解説！【中1数学】 [1qn7Rn5ywmM].txt  【一次方程式】方程式と一次方程式をわかりやすく解説！【中1数学】 [aEFwu7e7bmU].txt  【一次方程式】比と比例式についてわかりやすく解説！【中1数学】 [nk28ei2kHCg].txt  【一次方程式】比例式の性質をわかりやすく解説！【中1数学】 [mETLn33IIBI].txt  【一次方程式】等式の性質をわかりやすく解説！【中1数学】 [jS3pvtWs01Y].txt  【一次方程式の利用】2つの食塩水を混ぜて9％の食塩水を作る問題を解説！【中1数学】 [ocSuvotA_V4].txt  【一次方程式の利用】じゃんけんして階段を上ったり下りたりする問題をわかりやすく解説！【中1数学】 [58pt_XWTx70].txt  【一次方程式の利用】弟が兄を追いかける！【中1数学】 [v-DBadQxP-Q].txt  【一次方程式の利用】母の年齢が娘の年齢の3倍になるのは何年後？【中1数学】 [dCwvYX08oMo].txt  【一次方程式の利用】長方形を並べて正方形にするときの一辺の長さをわかりやすく解説！【中1数学】 [jDXNMEUPH7s].txt  【一次方程式の利用】食塩水に水を入れて薄める問題をわかりやすく解説！【中1数学】 [RhiS6KkcubQ].txt  【一次方程式の利用】食塩水の文章題をわかりやすく解説！【中1数学】 [VjohQQueAZo].txt
api/movies/【中1数学】平面図形/: 【平面図形】おうぎ形についてわかりやすく解説！【中1数学】 [veghi9mIAnY].txt  【平面図形】おうぎ形の「弧の長さ」と「面積」【中1数学】 [GuW-HezlgDk].txt  【平面図形】円と接線をわかりやすく解説！【中1数学】 [Vokl3TI7hVw].txt  【平面図形】円の面積の公式をわかりやすく解説！【中1数学】 [RxeUjXSfDrs].txt  【平面図形】円周の長さについてわかりやすく解説！【中1数学】 [T6NE-mUOK3U].txt  【平面図形】回転移動と対称移動をわかりやすく解説！【中1数学】 [_qQjn4z7m_E].txt  【平面図形】回転移動をわかりやすく解説！【中1数学】 [zEsk00VMoyM].txt  【平面図形】垂直と平行をわかりやすく解説！【中1数学】 [JKNFix6Zv3A].txt  【平面図形】垂直二等分線の作図をわかりやすく解説！【中1数学】 [xdVtlx4U2o0].txt  【平面図形】垂線の作図をわかりやすく解説！【中1数学】 [OcqvCnq7X18].txt  【平面図形】対称移動をわかりやすく解説！【中1数学】 [wiAjLseloEA].txt  【平面図形】平行移動してできる図形について解説！【中1数学】 [xNFVE73DJ9k].txt  【平面図形】斜線部分の面積を求める！【中1数学】 [hHtCxe1ykNM].txt  【平面図形】直線と角をわかりやすく解説！【中1数学】 [7Vzv_DtHxkg].txt
api/movies/【中1数学】文字式/: 【文字式】7個の数を40行繰り返すときの合計をわかりやすく解説！【中1数学】 [mmZLwC8R_7w].txt  【文字式】ab＜0, abc＞0 になるときのa,b,cの符号を考える！【中1数学】 [NEYqzo0Q9Ys].txt  【文字式】不等式をわかりやすく解説！【中1数学】 [j9WlAMfnH8I].txt  【文字式】代入と式の値をわかりやすく解説！【中1数学】 [4e06nVEGauQ].txt  【文字式】加法と減法の混合している問題をわかりやすく解説！【中1数学】 [mIbEA9LIwow].txt  【文字式】数量を文字で表す！加法と減法を使って解説！【中1数学】 [xc4poyQQVkc].txt  【文字式】文字式の乗除（かけ算・わり算）をわかりやすく解説！【中1数学】 [KwXIyBiyeq8].txt  【文字式】文字式の商（わり算）をわかりやすく解説！【中1数学】 [p58eYjKhzkQ].txt  【文字式】計算して式を簡単にする！【中1数学】 [mWq5KKwtwoM].txt  (+7 more)
tests/: test_sample.py
(+534 files in other folders)
